--- a/src/search/index.html
+++ b/src/search/index.html
@@ -8,6 +8,8 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><!--HTML_PLACEHOLDER--></div>
+
+    <!--DATA_PLACEHOLDER-->
   </body>
 </html>
